--- a/docs/modules/ROOT/pages/Stream-Processing-Intro.adoc
+++ b/docs/modules/ROOT/pages/Stream-Processing-Intro.adoc
@@ -26,7 +26,8 @@ Step 1: Connect to the streaming data source.
 Step 2: Import customer and inventory databases.
 Step 3: Generate pick-and-ship order
 Step 4: Generate info for money collection
-Step 5: Update inventory count
+Step 5: Generate shipping confirmation
+Step 6: Update inventory count
 
 // Optional: What does the reader need before starting this tutorial? Think about tools or knowledge. Delete this section if your readers can dive straight into the lesson without requiring any prerequisite knowledge.
 == Before you Begin
@@ -40,15 +41,39 @@ Before starting this tutorial, make sure that you meet the following prerequisit
 * Download the repository at https://github.com/hazelcast-guides/Stream-Processing-Intro
 
 
-== Step 1. Connect to the Streaming Data Source
+== Step 1. Connect to the Streaming Data Source and Generate Streaming Data
 
-(Insert instructions here for setting up kafka)
+In this step, you'll spin up the Kafka server, connect it to your Viridian cluster, use SQL to create the topic in Kafka, then generate data using Hazelcast SQL `generate-stream` function to create randomized customer order information and insert it into Kafka.  
 
-. blahdiblah something about generating streaming data 
+image::step1.jpg[]
 
+(Insert instructions here for setting up sandbox environment)
+
+. Create a mapping for the Kafka topic using SQL. This command accomplishes three things:
+* Defines the format of the data coming from the Kafka server.
+* Creates the topic on the Kafka server if it does not exist.
+* Specifies the address of the Kafka server.
++
+```sql
+CREATE OR REPLACE MAPPING orders(
+     __key BIGINT,
+    cust_id VARCHAR,
+    item_num VARCHAR,
+    quantity SMALLINT,
+    order_ts TIMESTAMP)
+TYPE Kafka
+OPTIONS (
+    'keyFormat' = 'bigint',
+    'valueFormat' = 'json-flat',
+    'bootstrap.servers' = '127.0.0.1:9092');
+
+```
+
+. Generate the streaming data and insert it into Kafka. 
 +
 ```sql
 CREATE OR REPLACE VIEW orders AS
+-- INSERT INTO orders
   SELECT id,
 
        CASE WHEN orderRand BETWEEN 0 AND 0.2 THEN '11001'
@@ -73,17 +98,31 @@ FROM
     (SELECT v as id,
            RAND(v*v) as orderRand,
            TO_TIMESTAMP_TZ(v*10 + 1645484400000) as order_ts
-     FROM TABLE(generate_stream(15))); 
+     FROM TABLE(generate_stream(7))); 
 ```
 
-== Step 2. Query Streaming Data
+. View all data coming from the Kafka server. Note that, because you are viewing a data stream, you will need to press CTRL-C to stop the query. 
++
+```sql
+SELECT * FROM orders;
+```
 
-////
-Continue the design approach you chose in the previous part and continue it through to the end of the tutorial.
-////
+. (Optional) Run additional queries, filtering on different fields or expected values. Example; 
 
-== Step 3. Load Fast Data Store
++
+```sql
+SELECT * FROM orders
+WHERE cust_id='11001';
 
+```
+
+== Step 2. Load Fast Data Store
+image::step2.jpg[]
+
+In this step, you'll load the data stores that will be used for stream enrichment and for inventory tracking. 
+
+. Create the mapping for the customer database, which will be stored in an IMap.
++
 ```sql
 CREATE or REPLACE MAPPING customers (
      __key BIGINT,
@@ -98,16 +137,23 @@ OPTIONS (
 'keyFormat'='bigint',
 'valueFormat'='json-flat');
 ```
-
+. Populate the `customers` map with data.
++
 ```sql
 INSERT INTO customers VALUES
-(1, 11001, 'Smith', 'John', '123 Main St', 'Ames, IA 50012', '515-555-1212'),
-(2, 11002, 'Li', 'Guo', '456 Powell St', 'San Francisco, CA 94108', '415-555-1212'),
-(3, 11003, 'Ivanov', 'Sergei', '999 Brighton Blvd', 'New York, NY 11235','212-555-1212'),
-(4, 11004, 'Mohammed', 'Ibrahim', '42 Elm St', 'Dearborn, MI 48126', '313-555-1212'),
-(5, 11005, 'Patel', 'Ram', '5151 Market St', 'Trenton, NJ 08615', '609-555-1212');
+(1, '11001', 'Smith', 'John', '123 Main St', 'Ames, IA 50012', '515-555-1212'),
+(2, '11002', 'Li', 'Guo', '456 Powell St', 'San Francisco, CA 94108', '415-555-1212'),
+(3, '11003', 'Ivanov', 'Sergei', '999 Brighton Blvd', 'New York, NY 11235','212-555-1212'),
+(4, '11004', 'Mohammed', 'Ibrahim', '42 Elm St', 'Dearborn, MI 48126', '313-555-1212'),
+(5, '11005', 'Patel', 'Ram', '5151 Market St', 'Trenton, NJ 08615', '609-555-1212');
 ```
-
+. Verify that the data has been added to the `customers` map.
++
+```sql
+SELECT * FROM customers;
+```
+. Create the mapping for the inventory database, which will be stored in an IMap.
++
 ```sql
 CREATE or REPLACE MAPPING inventory (
      __key BIGINT,
@@ -119,7 +165,8 @@ OPTIONS (
 'keyFormat'='bigint',
 'valueFormat'='json-flat');
 ```
-
+. Populate the `inventory` database.
++
 ```sql
 INSERT INTO inventory VALUES
 (1, '501', 1.99, 500),
@@ -127,11 +174,20 @@ INSERT INTO inventory VALUES
 (3, '503', 5.99, 500),
 (4, '504', 7.99, 500);
 ```
+. Verify that the data has been added to the `inventory` database.
++
+```sql
+SELECT * from inventory;
+```
 
-== Step 4: Generate Warehouse Pick Order
+== Step 3: Generate Warehouse Pick Order
 
-. In order to ensure that data is included in the correct window, you have to first create a new view that orders the data based on one of the data fields (the watermark). In this tutorial, we’ll use timestamp as the watermark.
+image::step3.jpg[]
 
+In this step, you will join the streaming order information with the customer shipping data to generate a pick and ship order for the inventory warehouse.
+
+. Create an IMap to store pick order data.
++
 ```sql
 CREATE OR REPLACE MAPPING PickOrder (
      __key BIGINT,
@@ -148,24 +204,19 @@ TYPE IMap
 OPTIONS (
 'keyFormat'='bigint',
 'valueFormat'='json-flat');
-
 ```
-
+. Verify that the IMap has been created, but holds no data.
++
 ```sql
-CREATE OR REPLACE VIEW ProcessStatus AS
-     SELECT
-          ord.item_num,
-          ord.quantity,
-          inv.quantity,
-          CASE
-               WHEN (ord.quantity > inv.quantity) THEN 'Unable to process'
-               ELSE 'Processing'
-     END AS status
-     FROM orders AS ord
-     JOIN inventory AS inv
-     ON ord.item_num = inv.item_num;
+SELECT * FROM PickOrder;
 ```
-
+. Join the streaming order data with the customer database. 
++
+[NOTE]
+====
+Because we are issuing this `INSERT` command interactively via the CLC, the process will run "live" until you press CTRL-C. We will make this a background job later in this step.
+==== 
++
 ```sql
 INSERT INTO PickOrder
      SELECT 
@@ -184,13 +235,95 @@ INSERT INTO PickOrder
      JOIN inventory ON ord.item_num = inventory.item_num
      WHERE ord.quantity < inventory.quantity;
 ```
+. Press CTRL-C to stop the join.
+. Verify that the `PickOrder` IMap now contains data.
++
+```sql
+SELECT * FROM PickOrder;
+```
+. Create a job that generates the PickOrder. This uses the same `INSERT INTO` syntax as before. Creating a job places this process into the background so it is running continuously without user intervention. 
++
+```sql
+CREATE JOB PickOrder AS
+SINK INTO PickOrder
+     SELECT 
+          ord.id AS __key,
+          ord.order_ts AS ts,
+          ord.item_num AS item_num,
+          ord.quantity AS quantity,
+          ord.cust_id AS cust_id,
+          cust.last_name AS last_name,
+          cust.first_name AS first_name,
+          cust.address1 AS address1,
+          cust.address2 AS address2,
+          cust.phone AS phone
+     FROM orders AS ord
+     JOIN customers AS cust ON ord.cust_id = cust.cust_id
+     JOIN inventory ON ord.item_num = inventory.item_num
+     WHERE ord.quantity < inventory.quantity;
+```
+. From your Viridian console, monitor memory utilization. You should see it increasing.
+
+. From Management Center, under Storage, select Maps. You should see the PickOrder map entries increasing.
+
+. From Management Center, under Streaming, select Jobs. You should see the PickOrder job running. Select the job, then click the Suspend button to pause the job.
 
 
+== Step 4: Generate Order Total
+image::step4.jpg[]
 
+In this step, you will perform a three-way join with the streaming order information, the customer database, and the inventory database. The output includes a calculation of the amount due for the order, and is passed to Kafka as an outbound stream to pass to a payment collection system. 
 
-== Step 5: Generate Order Total
+. Create a new topic called `amount_due` on the Kafka server.
++
+```sql
+CREATE OR REPLACE MAPPING amount_due(
+     __key BIGINT,
+    cust_id VARCHAR,
+     last_name VARCHAR,
+     first_name VARCHAR,
+     address1 VARCHAR,
+     address2 VARCHAR,
+     phone VARCHAR,
+     total DECIMAL)
+TYPE Kafka
+OPTIONS (
+    'keyFormat' = 'bigint',
+    'valueFormat' = 'json-flat',
+    'bootstrap.servers' = '127.0.0.1:9092');
+```
+. Join the order stream and the customer database to generate the amount due information and publish it to the `amount_due` topic you just created.
++
+```sql
+CREATE JOB amount_due AS
+SINK INTO amount_due
+     SELECT 
+          ord.id AS __key,
+          ord.cust_id AS cust_id,
+          cust.last_name AS last_name,
+          cust.first_name AS first_name,
+          cust.address1 AS address1,
+          cust.address2 AS address2,
+          cust.phone AS phone,
+          (ord.quantity*inv.unit_price) AS total
+     FROM orders AS ord
+     JOIN customers AS cust ON ord.cust_id = cust.cust_id
+     JOIN inventory AS inv ON ord.item_num = inv.item_num;
+```
+
+. Verify that data is being published to the `amount_due` topic.
++
+```sql
+SELECT * FROM amount_due;
+```
+
+== Step 5: Verify Order Has Shipped
+
+In this step, you will join two streams. You will redirect the output of the PickOrder job to a Kafka topic, then join it to a new stream with shipping information. The output will include 
 
 == Step 6: Update Inventory
+
+In this step, you will use the Hazelcast Entry Processor to update the inventory as each order is processed. Entry Processor guarantees that each order is processed in sequence and prevents incorrect calculations from out-of-sequence processing. 
 
 
 == Summary
