External servers enabled
Update steps to remove Viridian references, add instructions to connect to external data sources.

--- a/docs/modules/ROOT/pages/Stream-Processing-Intro.adoc
+++ b/docs/modules/ROOT/pages/Stream-Processing-Intro.adoc
@@ -3,15 +3,15 @@ Make sure to rename this file to the name of your repository and add the filenam
 ////
 
 // Describe the title of your article by replacing 'Tutorial template' with the page name you want to publish.
-= Introduction to Stream Processing with Hazelcast
+= Hazelcast Platform Essentials
 // Add required variables
 :page-layout: tutorial
 :page-product: cloud 
-:page-categories: Stream Processing, SQL 
+:page-categories: Stream Processing, SQL, fast data 
 :page-lang: java, python
 :page-enterprise: 
 :page-est-time: 45 mins
-:description: Use Hazelcast Viridian Cloud to process streaming data, enrich streaming data with data in fast storage, store output in fast storage, and use an entry processor to update inventory. 
+:description: Use Hazelcast Cloud to process streaming data, enrich streaming data with data in fast storage, store output in fast storage, and use an entry processor to update inventory. 
 
 {description}
 
@@ -22,7 +22,7 @@ image:diagram.jpg[]
 
 In this tutorial, you will build, step by step, a simple e-commerce order processing application. 
 
-Step 1: Set up a streaming data source.
+Step 1: Connect to a streaming source.
 Step 2: Import customer and inventory databases.
 Step 3: Generate pick-and-ship order
 Step 4: Generate info for money collection
@@ -32,137 +32,182 @@ Step 6: Update inventory count
 // Optional: What does the reader need before starting this tutorial? Think about tools or knowledge. Delete this section if your readers can dive straight into the lesson without requiring any prerequisite knowledge.
 == Before you Begin
 
-This tutorial is designed to be completed in conjunction with the Introduction to Stream Processing with Hazelcast course. Although you can complete this tutorial independently, the course provides operational context and additional information on Hazelcast. 
+This tutorial is designed to be completed in conjunction with the [.underline]#Hazelcast Platform Essentials# course. Although you can complete this tutorial independently, the course provides operational context and additional information on Hazelcast. 
 
 Before starting this tutorial, make sure that you meet the following prerequisites:
 
-* https://docs.hazelcast.com/cloud/get-started[Set up a Viridian Cloud cluster]
-* https://docs.hazelcast.com/clc/5.3/get-started[Connect the Command Line Client] or open the SQL tab for your cluster
+* https://docs.hazelcast.com/cloud/get-started[Set up a Hazelcast Cloud cluster]
+* https://docs.hazelcast.com/clc/latest/get-started[Connect the Command Line Client] or open the SQL tab for your cluster
 * Download the repository at https://github.com/hazelcast-guides/Stream-Processing-Intro
 
 
-== Step 1. Generate Streaming Data
+== Step 1. Connect to Streaming Source
 
+In this step, you will set up connections to an external streaming source and an external database.
 
+image:step1.png[streamsource diagram]
+
+. If you are using the cloud dashboard, open an SQL tab. If you are using the Command Line Client (CLC), open the CLC connection to your cloud cluster.
++
+Cloud:
+image:step1dashboard.png[DefaultSQLTab]
++
+CLC:
+image:step1clc.png[CLC prompt]
++
 [NOTE]
 ====
-This lab uses SQL to simulate an external streaming data source. 
+Your screen or prompt will display your cluster name where the examples above say "EdSrvs1".
 ====
 
-In this step, you will generate a stream of data using the Hazelcast SQL `generate-stream` function to create randomized customer order information.  
-
-image:step1.jpg[]
-
-
-. Paste the following code into your CLC command line or cluster SQL tab. The code creates a view that is populated by randomly-generated data. 
+. Paste the following code to establish a connection to the streaming data source.
 +
 ```sql
-CREATE OR REPLACE VIEW orders AS
-  SELECT id,
-
-       CASE WHEN orderRand BETWEEN 0 AND 0.2 THEN '11001'
-            WHEN orderRand BETWEEN 0.2 AND 0.4 THEN '11002'
-            WHEN orderRand BETWEEN 0.4 AND 0.6 THEN '11003'
-            WHEN orderRand BETWEEN 0.6 AND 0.8 THEN '11004'
-            ELSE '11005'
-       END as cust_id, 
-
-       CASE WHEN orderRand*1.5 BETWEEN 0 AND 0.25 THEN '501'
-            WHEN orderRand*1.5 BETWEEN 0.25 AND 0.5 THEN '502'
-            WHEN orderRand*1.5 BETWEEN 0.5 AND 0.75 THEN '503'
-            ELSE '504'
-       END as item_num,
-
-       CASE WHEN orderRand*.66 BETWEEN 0 AND .25 THEN CAST(1 AS SMALLINT)
-            WHEN orderRand*.66 BETWEEN .25 AND .5 THEN CAST(2 AS SMALLINT)
-            ELSE CAST(3 AS SMALLINT)
-       END as quantity,
-       order_ts
-FROM
-    (SELECT v as id,
-           RAND(v*v*v) as orderRand,
-           TO_TIMESTAMP_TZ(v*10 + 1645484400000) as order_ts
-     FROM TABLE(generate_stream(7))); 
+CREATE OR REPLACE DATA CONNECTION TrainingKafkaConnection 
+     TYPE Kafka 
+     NOT SHARED 
+     OPTIONS 
+          ('bootstrap.servers'='35.88.250.10:9092', 
+          'security.protocol'='SASL_PLAINTEXT',
+          'client.dns.lookup'='use_all_dns_ips',
+          'sasl.mechanism'='SCRAM-SHA-512',
+          'sasl.jaas.config'='org.apache.kafka.common.security.scram.ScramLoginModule required 
+          username="training_ro" password="h@zelcast!";', 
+          'session.timeout.ms'='45000'
+          );
 ```
 
-. Verify that the view is generating data. Note that, because you are viewing a data stream, you will need to press CTRL-C to stop the query. 
+. Paste the following code to subscribe to the streaming topic for sales data. 
 +
-```sql
-SELECT * FROM orders;
+```clc
+CREATE OR REPLACE MAPPING "orders_topic"
+EXTERNAL NAME "stream_processing_intro.orders" (
+    id bigint,
+    order_time timestamp with time zone,
+    cust_id varchar,
+    item_num varchar,
+    quantity int
+)
+DATA CONNECTION "TrainingKafkaConnection"
+OPTIONS (
+    'keyFormat' = 'varchar',
+    'valueFormat' = 'json-flat'
+);
 ```
 
-. (Optional) Run additional queries, filtering on different fields or expected values. Example; 
+. Verify that you are receiving streaming data from the topic `orders_topic`.
++
+```clc
+SELECT * from orders_topic;
+```
++
+If you are using the query tab, press Execute Query. If you are using CLC, press enter to start the query.
 
 +
-```sql
-SELECT * FROM orders
-WHERE cust_id='11001';
-
-```
-STOP HERE IF YOU ARE TAKING THE INTRODUCTION TO STREAM PROCESSING CLASS! Watch the Fast Data Storage lesson before proceeding. 
+. Stop the query. If you are using the query tab press Stop Query. If you are using CLC, press CTRL-C.
 
 == Step 2. Load Fast Data Store
 image:step2.jpg[]
 
-[NOTE]
-====
-This lab uses SQL to insert data into the fast data store, simulating a data load from an external data source. 
-====
+In this step, you'll load the in-memory data stores that will be used for stream enrichment and for inventory tracking. The data is currently stored in an external Postgres database, and we need to move it to local memory for fast access. 
 
-In this step, you'll load the in-memory data stores that will be used for stream enrichment and for inventory tracking. 
+. Connect to the Postgres server.
++
+```clc
+CREATE OR REPLACE DATA CONNECTION TrainingPostgresConnection 
+     TYPE JDBC 
+     SHARED 
+     OPTIONS 
+          ('jdbcUrl'='jdbc:postgresql://training.cpgq0s6mse2z.us-west-2.rds.amazonaws.com:5432/postgres',
+          'user'='training_ro',
+          'password'='h@zelcast!'
+          );
+```
 
-. Create the mapping for the customer database, which will be stored in an IMap.
+. Create the mapping for the customer database stored in the Postgres server.
 +
 ```sql
-CREATE or REPLACE MAPPING customers (
-     __key BIGINT,
+CREATE OR REPLACE MAPPING "external_customers" 
+EXTERNAL NAME "stream_processing_intro"."customers" (
      cust_id VARCHAR,
      last_name VARCHAR,
      first_name VARCHAR,
      address1 VARCHAR,
      address2 VARCHAR,
-     phone VARCHAR )
-TYPE IMap
-OPTIONS (
-'keyFormat'='bigint',
-'valueFormat'='json-flat');
+     phone VARCHAR
+)
+DATA CONNECTION "TrainingPostgresConnection";
 ```
-. Populate the `customers` map with data.
+. Create the mapping for the IMap that will store the local copy of the customer database. Note that the data fields are identical.
 +
 ```sql
-SINK INTO customers VALUES
-(1, '11001', 'Smith', 'John', '123 Main St', 'Ames, IA 50012', '515-555-1212'),
-(2, '11002', 'Li', 'Guo', '456 Powell St', 'San Francisco, CA 94108', '415-555-1212'),
-(3, '11003', 'Ivanov', 'Sergei', '999 Brighton Blvd', 'New York, NY 11235','212-555-1212'),
-(4, '11004', 'Mohammed', 'Ibrahim', '42 Elm St', 'Dearborn, MI 48126', '313-555-1212'),
-(5, '11005', 'Patel', 'Ram', '5151 Market St', 'Trenton, NJ 08615', '609-555-1212');
+CREATE OR REPLACE MAPPING "customers"(
+     cust_id VARCHAR,
+     last_name VARCHAR,
+     first_name VARCHAR,
+     address1 VARCHAR,
+     address2 VARCHAR,
+     phone VARCHAR
+     )
+Type IMap
+OPTIONS (
+    'keyFormat' = 'varchar',
+    'valueFormat' = 'json-flat'
+);
 ```
-. Verify that the data has been added to the `customers` map.
+. Verify that the local IMap is currently empty.
++
+```sql
+SELECT * from customers;
+```
+. Copy the data from the external database to the local IMap.
++
+```sql
+INSERT INTO customers(__key, cust_id, last_name, first_name, address1, address2, phone)
+-- use cust_id for __key as well as first field in value
+SELECT cust_id, cust_id, last_name, first_name, address1, address2, phone
+FROM external_customers;
+```
+
+. Verify that the data has been added to the `customers` map. 
 +
 ```sql
 SELECT * FROM customers;
 ```
-. Create the mapping for the inventory database, which will be stored in an IMap.
++
+You should see the complete list of customers.
+
+. Create the mapping for the external inventory database.
 +
 ```sql
-CREATE or REPLACE MAPPING inventory (
-     __key BIGINT,
+CREATE OR REPLACE MAPPING "external_inventory" 
+EXTERNAL NAME "stream_processing_intro"."inventory" (
+    item_num VARCHAR,
+    unit_price DECIMAL,
+    quantity SMALLINT
+)
+DATA CONNECTION "TrainingPostgresConnection";
+```
+. Create the mapping for the IMap that will store the local copy of the inventory. 
++
+```sql
+CREATE or REPLACE MAPPING "inventory" (
+     __key VARCHAR,
      item_num VARCHAR,
      unit_price DECIMAL,
      quantity SMALLINT)
 TYPE IMap
 OPTIONS (
-'keyFormat'='bigint',
-'valueFormat'='json-flat');
+     'keyFormat'='varchar',
+     'valueFormat'='json-flat');
 ```
-. Populate the `inventory` database.
+. Copy the inventory data from the external database into the IMap
 +
 ```sql
-SINK INTO inventory VALUES
-(1, '501', 1.99, 500),
-(2, '502', 3.99, 500),
-(3, '503', 5.99, 500),
-(4, '504', 7.99, 500);
+INSERT INTO inventory(__key, item_num, unit_price, quantity)
+-- use item_num as key as well as first field in value
+SELECT item_num, item_num, unit_price, quantity
+FROM external_inventory;
 ```
 . Verify that the data has been added to the `inventory` database.
 +
@@ -202,7 +247,7 @@ SELECT * FROM PickOrder;
 ```
 . Join the streaming order data with the customer database to produce records to be added to the `PickOrder` IMap. Only add records if there are sufficient items in inventory.
 +
-The following fields will come from the `orders` stream
+The following fields will come from the `orders_topic` stream
 +
 * Order ID (Use as __key for the IMap)
 * Order timestamp
@@ -226,7 +271,7 @@ The common data field between `orders` and `inventory` is `item_num`.
 ```sql
 SELECT 
      ord.id AS __key,
-     ord.order_ts AS ts,
+     ord.order_time AS ts,
      ord.item_num AS item_num,
      ord.quantity AS quantity,
      ord.cust_id AS cust_id,
@@ -235,7 +280,7 @@ SELECT
      cust.address1 AS address1,
      cust.address2 AS address2,
      cust.phone AS phone
-FROM orders AS ord
+FROM orders_topic AS ord
 JOIN customers AS cust ON ord.cust_id = cust.cust_id
 JOIN inventory ON ord.item_num = inventory.item_num
 WHERE ord.quantity < inventory.quantity;
@@ -269,7 +314,7 @@ SINK INTO PickOrder
 ```sql
 SELECT * FROM PickOrder;
 ```
-. From your Viridian Cloud console, monitor memory utilization. You should see it increasing.
+. From your cloud console, monitor memory utilization. You should see it increasing.
 
 . From Management Center, under Storage, select Maps. You should see the PickOrder map entries increasing.
 
@@ -312,7 +357,7 @@ SINK INTO amount_due
           cust.address2 AS address2,
           cust.phone AS phone,
           (ord.quantity*inv.unit_price) AS total
-     FROM orders AS ord
+     FROM orders_topic AS ord
      JOIN customers AS cust ON ord.cust_id = cust.cust_id
      JOIN inventory AS inv ON ord.item_num = inv.item_num;
 ```
